// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PriceWrapperList /> should render with extra price information 1`] = `
<PriceWrapperList
  extraPriceInfo="120 Tabletten"
  price={
    Object {
      "currency": "EUR",
      "discount": 52,
      "info": "PriceInfoString",
      "msrp": 22.95,
      "unitPrice": 10.95,
      "unitPriceMin": 10.95,
      "unitPriceStriked": 0,
    }
  }
>
  <GridItem
    className="css-13bo1h3"
    component="li"
    grow={1}
    shrink={1}
  >
    <li
      className="css-13bo1h3 css-1gs0ko2"
    >
      <Price
        className=""
        currency="EUR"
        discounted={true}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={10.95}
        unitPriceMin={10.95}
      >
        <div
          className="css-izofhs  css-1ncyhu"
          data-test-id="minPrice: 10.95 price: 10.95 currency: EUR"
        >
          <Translate
            className=""
            params={Object {}}
            string="price.from"
          >
            <span
              className=""
            >
              price.from
            </span>
          </Translate>
        </div>
      </Price>
      <ExtraPriceInfo
        styles="css-drzzh9"
        text="120 Tabletten"
      >
        <div
          className="css-drzzh9"
        >
          120 Tabletten
        </div>
      </ExtraPriceInfo>
      <PriceStriked
        className="css-1wf59mi"
        currency="EUR"
        value={22.95}
      >
        <div
          className="css-1sagvrb css-1wf59mi "
        >
          <span
            data-test-id="strikedPrice: 22.95"
          >
            <FormatPrice
              className=""
              currency="EUR"
              fractions={true}
              price={22.95}
            >
              <span
                className=""
              >
                22.95
              </span>
            </FormatPrice>
          </span>
        </div>
      </PriceStriked>
      <PriceInfo
        className="css-xbvepi"
        text="PriceInfoString"
      >
        <div
          className="css-1kqiarg css-xbvepi"
          dangerouslySetInnerHTML={
            Object {
              "__html": "PriceInfoString",
            }
          }
          data-test-id="priceInfo: PriceInfoString"
        />
      </PriceInfo>
    </li>
  </GridItem>
</PriceWrapperList>
`;

exports[`<PriceWrapperList /> should render with msrp 1`] = `
<PriceWrapperList
  extraPriceInfo=""
  price={
    Object {
      "currency": "EUR",
      "discount": 52,
      "info": "PriceInfoString",
      "msrp": 22.95,
      "unitPrice": 10.95,
      "unitPriceMin": 10.95,
      "unitPriceStriked": 0,
    }
  }
>
  <GridItem
    className="css-13bo1h3"
    component="li"
    grow={1}
    shrink={1}
  >
    <li
      className="css-13bo1h3 css-1gs0ko2"
    >
      <Price
        className=""
        currency="EUR"
        discounted={true}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={10.95}
        unitPriceMin={10.95}
      >
        <div
          className="css-izofhs  css-1ncyhu"
          data-test-id="minPrice: 10.95 price: 10.95 currency: EUR"
        >
          <Translate
            className=""
            params={Object {}}
            string="price.from"
          >
            <span
              className=""
            >
              price.from
            </span>
          </Translate>
        </div>
      </Price>
      <ExtraPriceInfo
        styles="css-drzzh9"
        text=""
      />
      <PriceStriked
        className="css-1wf59mi"
        currency="EUR"
        value={22.95}
      >
        <div
          className="css-1sagvrb css-1wf59mi "
        >
          <span
            data-test-id="strikedPrice: 22.95"
          >
            <FormatPrice
              className=""
              currency="EUR"
              fractions={true}
              price={22.95}
            >
              <span
                className=""
              >
                22.95
              </span>
            </FormatPrice>
          </span>
        </div>
      </PriceStriked>
      <PriceInfo
        className="css-xbvepi"
        text="PriceInfoString"
      >
        <div
          className="css-1kqiarg css-xbvepi"
          dangerouslySetInnerHTML={
            Object {
              "__html": "PriceInfoString",
            }
          }
          data-test-id="priceInfo: PriceInfoString"
        />
      </PriceInfo>
    </li>
  </GridItem>
</PriceWrapperList>
`;

exports[`<PriceWrapperList /> should render with strike price 1`] = `
<PriceWrapperList
  extraPriceInfo=""
  price={
    Object {
      "currency": "EUR",
      "discount": 52,
      "info": "",
      "msrp": 0,
      "unitPrice": 10.95,
      "unitPriceMin": 10.95,
      "unitPriceStriked": 22.95,
    }
  }
>
  <GridItem
    className="css-13bo1h3"
    component="li"
    grow={1}
    shrink={1}
  >
    <li
      className="css-13bo1h3 css-1gs0ko2"
    >
      <Price
        className=""
        currency="EUR"
        discounted={true}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={10.95}
        unitPriceMin={10.95}
      >
        <div
          className="css-izofhs  css-1ncyhu"
          data-test-id="minPrice: 10.95 price: 10.95 currency: EUR"
        >
          <Translate
            className=""
            params={Object {}}
            string="price.from"
          >
            <span
              className=""
            >
              price.from
            </span>
          </Translate>
        </div>
      </Price>
      <ExtraPriceInfo
        styles="css-drzzh9"
        text=""
      />
      <PriceStriked
        className="css-1wf59mi"
        currency="EUR"
        value={22.95}
      >
        <div
          className="css-1sagvrb css-1wf59mi "
        >
          <span
            data-test-id="strikedPrice: 22.95"
          >
            <FormatPrice
              className=""
              currency="EUR"
              fractions={true}
              price={22.95}
            >
              <span
                className=""
              >
                22.95
              </span>
            </FormatPrice>
          </span>
        </div>
      </PriceStriked>
    </li>
  </GridItem>
</PriceWrapperList>
`;

exports[`<PriceWrapperList /> should render without discounts 1`] = `
<PriceWrapperList
  extraPriceInfo=""
  price={
    Object {
      "currency": "EUR",
      "discount": 0,
      "info": "PriceInfoString",
      "msrp": 0,
      "unitPrice": 22.95,
      "unitPriceMin": 22.95,
      "unitPriceStriked": 0,
    }
  }
>
  <GridItem
    className="css-13bo1h3"
    component="li"
    grow={1}
    shrink={1}
  >
    <li
      className="css-13bo1h3 css-1gs0ko2"
    >
      <Price
        className=""
        currency="EUR"
        discounted={false}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={22.95}
        unitPriceMin={22.95}
      >
        <div
          className="css-izofhs "
          data-test-id="minPrice: 22.95 price: 22.95 currency: EUR"
        >
          <Translate
            className=""
            params={Object {}}
            string="price.from"
          >
            <span
              className=""
            >
              price.from
            </span>
          </Translate>
        </div>
      </Price>
      <ExtraPriceInfo
        styles="css-drzzh9"
        text=""
      />
      <PriceInfo
        className="css-xbvepi"
        text="PriceInfoString"
      >
        <div
          className="css-1kqiarg css-xbvepi"
          dangerouslySetInnerHTML={
            Object {
              "__html": "PriceInfoString",
            }
          }
          data-test-id="priceInfo: PriceInfoString"
        />
      </PriceInfo>
    </li>
  </GridItem>
</PriceWrapperList>
`;
